<resources>

    <!--Comunes-->

    <string name="app_name">Magicka</string>
    <string name="action_settings">Ajustes</string>
    <string name="action_alex">Creador</string>
    <string name="action_sign_out">Cerrar sesion</string>

    <!--Strings Notificaciones-->
    <string name="nombre_canal">Notificaciones app</string>
    <string name="id_canal">canal_principal</string>
    <string name="desc_canal">Canal para la practica final</string>

    <!--Botones e Inputs-->
    <string name="boton_comprar">Comprar</string>
    <string name="boton_reserva">Apuntarse</string>
    <string name="input_fecha_evento">Fecha del evento</string>
    <string name="input_nombre_evento">Nombre del evento</string>
    <string name="boton_inicio">Iniciar Sesion</string>
    <string name="boton_registro">Registrarse</string>
    <string name="input_nombre_usuario">Nombre de usuario</string>
    <string name="input_correo">Correo electronico</string>
    <string name="input_contraseña">Contraseña</string>
    <string name="input_contraseña2">Repite contraseña</string>
    <string name="switch_disponible">Esta disponible?</string>
    <string name="input_nombre_carta">Nombre de la carta</string>
    <string name="input_precio">Precio</string>
    <string name="input_aforo">Aforo</string>

    <!--Fin comunes-->

    <!--Usuario-->
    <string name="texto_noti_usuario">El pedido de la carta \"%1$s\" ha sido procesado, ya puedes venir a recogerlo.</string>
    <string name="titulo_noti_usuario">Un pedido ha sido procesado</string>

    <!--Referente a navegacion-->
    <string name="title_activity_user">UserActivity</string>
    <string name="user_home">Inicio</string>
    <string name="user_dashboard">Eventos</string>
    <string name="user_orders">Mis cartas</string>
    <string name="user_profile">Perfil</string>
    <string name="user_viewCards">Ver carta</string>
    <string name="user_viewEvents">Ver eventos</string>
    <string name="user_events">Eventos</string>

    <!--Perfil de usuario-->
    <string name="nombre_usuario">%1$s</string>
    <string name="num_cartas">Cartas</string>
    <string name="ninguna_carta">Aun no tienes ninguna carta \n ¿Por que no compras una?</string>
    <string name="cartas_por_cat">Mis cartas por categoria</string>
    <string name="aforo">Aforo</string>
    <string name="precio">Precio</string>



    <!--Fin Usuario-->

    <!--Admin-->
    <string name="texto_noti_admin">%1$s ha realizado un pedido de: %2$s</string>
    <string name="titulo_noti_admin">Se ha realizado un pedido</string>

    <!--Referente a navegacion-->
    <string name="title_activity_admin">AdminActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Bienvenido!</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="admin_home">Inicio</string>
    <string name="admin_events">Eventos</string>
    <string name="admin_orders">Pedidos</string>
    <string name="admin_add_card">Añadir carta</string>
    <string name="admin_add_event">Añadir evento</string>

    <!--Fin admin-->

    <!--Strings filtros-->
    <string name="filtro_pedido">Mostrar solo pedidos no aceptados</string>
    <string name="filtro_cartas">Filtrar por categoria</string>
    <string name="selector_tema">Tema Oscuro</string>

    <!--String Evento-->
    <string name="evento_aforo_rv">Aforo: %1$d/%2$d</string>
    <string name="evento_precio_rv">%1$.2f %2$s</string>
    <string name="evento_precio">Precio: %1$.2f %2$s</string>
    <string name="evento_aforo">%1$d/%2$d</string>

    <string name="admin_reserva_fecha">Se unio el: %1$s</string>
    <string name="admin_evento_texto">Usuarios que se han unido: </string>


    <!--String Carta-->
    <string name="carta_precio_rv">%1$.2f %2$s</string>
    <string name="carta_precio">Precio: %1$.2f %2$s</string>
    <string name="nom_cliente">Cliente: %1$s</string>

    <!--Monedas-->

    <string-array name="nom_monedas">
        <item>Euro</item>
        <item>Dolar</item>
    </string-array>

    <string-array name="sig_monedas">
        <item>€</item>
        <item>$</item>
    </string-array>

</resources>