<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin.AdminAddCardFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_nombre"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fanc_reverso">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fanc_nom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_nombre_carta"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/fanc_img_carta"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toBottomOf="@+id/fanc_reverso"
        app:layout_constraintEnd_toEndOf="@+id/fanc_reverso"
        app:layout_constraintStart_toStartOf="@+id/fanc_reverso"
        app:layout_constraintTop_toTopOf="@+id/fanc_reverso"
        tools:src="@drawable/magic_card_back" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_precio"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="4dp"
        app:endIconDrawable="@drawable/ic_baseline_monetization_on_24"
        app:layout_constraintEnd_toStartOf="@+id/fanc_dis"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/til_nombre"
        app:layout_constraintTop_toBottomOf="@+id/til_nombre">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fanc_pre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_precio"
            android:inputType="numberDecimal"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <Switch
        android:id="@+id/fanc_dis"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/switch_disponible"
        android:textAppearance="@style/texto"
        app:layout_constraintBottom_toBottomOf="@+id/til_precio"
        app:layout_constraintEnd_toEndOf="@+id/til_nombre"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/til_precio"
        app:layout_constraintTop_toTopOf="@+id/til_precio" />

    <ImageView
        android:id="@+id/fanc_reverso"
        style="@style/imagen_extra_grande"
        android:layout_marginTop="32dp"
        android:adjustViewBounds="true"
        android:src="@drawable/magic_card_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/fanc_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:spinnerMode="dialog"
        app:layout_constraintEnd_toEndOf="@+id/til_nombre"
        app:layout_constraintStart_toStartOf="@+id/til_nombre"
        app:layout_constraintTop_toBottomOf="@+id/til_precio" />
</androidx.constraintlayout.widget.ConstraintLayout>